# meeting-scribe

./: .env.gb10  .gitattributes  .gitignore  CHANGELOG.md  COMPETITIVE-LANDSCAPE.md  CONTRIBUTING.md  LICENSE  README.md  STYLING.md  bootstrap.sh  docker-compose.gb10.pre-omni.yml  docker-compose.gb10.pre-vllm-omni.yml  docker-compose.gb10.yml  mise.toml  pyproject.toml
.git-waivers/: .gitkeep
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  dependency-freshness.yml  pages.yml  tests.yml
benchmarks/: BASELINE-2026-04-13.md  DEEP-ANALYSIS-2026-04-13.md  MODEL_SELECTION.md  README.md  _bench_paths.py  _consent_check.py  _fixture.py  _redaction.py  _tts_backends.py  asr_accuracy_latency.py  bootstrap_fixture_from_meeting.py  cross_check_speakers.py  e2e_meeting_lag.py  gpu_profile.py  loaded_playback_check.py  perf_baseline.py  reprocess_bench.py  summary_param_ab.py  test_9b_model.sh  translate_accuracy_latency.py  translation_benchmark.py  tts_concurrent_load.py  tts_quality_mos.py  validate_meeting.py  vllm_optimization.py
benchmarks/corpus/: en_ja_meeting_v2.jsonl  multilingual_v1.jsonl
benchmarks/oom-tune-2026-05/: REPORT.md  gen_probe_pcm.py
benchmarks/results/: 32K-context_concurrency.json  8K-context_concurrency.json  Coder-30B-TurboQuant-128K_concurrency.json  Coder-30B-TurboQuant_en_to_ja.json  Coder-30B-TurboQuant_ja_to_en.json  INT4-AutoRound-35B_en_to_ja.json  INT4-AutoRound-35B_ja_to_en.json  Qwen3-Coder-30B-A3B-FP8_ja_to_en.json  Qwen3-Coder-30B-warmup_en_to_ja.json  Qwen3-Coder-30B-warmup_ja_to_en.json  Qwen3.5-35B-baseline_en_to_ja.json  Qwen3.5-35B-baseline_ja_to_en.json  Qwen3.5-35B-v2-FLASHINFER_concurrency.json  Qwen3.5-35B-v2-FLASHINFER_en_to_ja.json  Qwen3.5-35B-v2-FLASHINFER_ja_to_en.json  Qwen3.5-9B-FP8_concurrency.json  Qwen3.5-9B-FP8_en_to_ja.json  Qwen3.5-9B-FP8_ja_to_en.json  asr-language-matrix.md  baseline_2026-04-13_pre-furigana.json  baseline_2026-04-13_with-furigana.json  baseline_gpu70_seq10_concurrency.json  current_concurrency.json  optimized_gpu75_seq64_autokv_concurrency.json  optimized_gpu75_seq64_fp8kv_concurrency.json  reprocess_0a96093d_fresh-from-audio_20260414T042524.json  reprocess_f38d5807_auto-recover-diarize_20260414T040924.json  reprocess_f38d5807_diarize-serial-breaker-post-oom-fix_20260414T040029.json  reprocess_f38d5807_diarize-serial-concurrency-10_20260414T034046.json  reprocess_f38d5807_fresh-from-audio_20260414T042327.json  reprocess_f38d5807_pyannote-onehot-cpu-fix_20260414T044027.json
containers/cohere-transcribe/: Dockerfile  requirements.txt  server.py
containers/funcosyvoice/: Dockerfile  requirements.txt
containers/omni/: ACCEPTANCE.md  BUILD_PINS.md  Dockerfile  README.md
containers/pyannote/: Dockerfile  server.py
containers/sortformer/: Dockerfile  server.py
containers/tts/: Dockerfile  server.py
containers/tts-vllm/: Dockerfile  Dockerfile.spike  README.md
containers/vllm-asr/: Dockerfile  README.md
docker/slides-worker/: Dockerfile  init_package.py
docs/: captive-gateway.md  cli-ui-parity.md  gb10-live-stack.md  scribe-window-contract.md  styling.md  wifi-wan.md
docs/known-issues/: wrapper-truncation.md
docs/plans/: sta-ap-unified-implementation.md  sta-ap-unified-verification.md
overlay/: main.js  package.json
provisioning/sysctl/: 60-meeting-scribe.conf
provisioning/systemd/: meeting-scribe-helper.service  meeting-scribe-kiosk-hotplug.service  meeting-scribe-kiosk.service  meeting-scribe-mdns.service
provisioning/tmpfiles/: meeting-scribe.conf
provisioning/udev/: 85-meeting-scribe-hdmi-hotplug.rules  99-sddc-speakerphone.rules
reports/2026-Q2-bench/: 2026-Q2-RETROSPECTIVE.md  B-tracks-status.md
reports/speakerphone-quality/: speakerphone-quality-20260513T124043.json
scripts/: _audio_quality_audit.py  _cancel_active.py  _dump_crash.py  _dump_listener_metrics.py  _mark_meeting_stopped.py  audio_capture_validate.py  audio_loudest_window.py  audio_spectrum.py  audio_spectrum_pcm.py  audit_dynamic_imports.py  audit_pages.py  audit_route_registration.py  backfill_slide_notes.py  benchmark_asr.py  benchmark_translation.py  bug_class_report.py  build-eff-wordlist.py  build_css.py  captive-portal-80.py  check_backend_apis.py  check_cli_ui_parity.py  check_flaky.py  check_lockfile_in_sync.py  check_secrets.py  check_ui_style.py  ci_local.py  cluster_speakers.py  diag_slide_viewer.py  gen_probe_audio_fixture.py  generate-summary.py  generate_silent_loop.py  healthcheck.py  ingest_recording.py  install-lingua.sh  install-unoserver.sh  install_tailwind.py  manual_test_status.py  persist-locale-settings.py  popout_smoke.py  probe_admin_route.py  (+24 more)
scripts/bench/: _aggregate_realworld.py  _analyze_standard_overlap.py  _compute_overlap_metric.py  _relabel_languages.py  asr_ja_wer_run.py  asr_meeting_realworld.py  check_model_drift.py  check_stale_pins.py  diarize_compare.py  preflight.py  (+7 more)
static/: TESTING_VIEWPORTS.md  benchmarking.html  guest.html  hardware-scaling.html  how-it-works.html  index.html  portal.html  reader.html
tests/: .flaky.toml  conftest.py  meeting_integrity_baseline.json  pytest_flaky_skip.py  test_admin_audio_api.py  test_admin_auth_matrix.py  test_admin_bt_api.py  test_admin_credentials_api.py  test_admin_landing_redirects.py  test_admin_notifications.py  test_admin_wan_api.py  test_admin_ws.py  test_admission.py  test_asr_alignment.py  test_asr_filters.py  test_asr_recovery_replay.py  test_audio_delivery_modes.py  test_audio_e2e.py  test_audio_input_hotpath.py  test_audio_never_deleted.py  test_audio_out_protocol.py  test_audio_quality.py  test_audio_range.py  test_audio_routing.py  test_audio_writer_process.py  test_back_fill_regressions.py  test_backends_furigana.py  test_bt_bridge.py  test_bt_profile_discovery.py  test_bt_status.py  test_captive_ack_tier_aware.py  test_captive_authorize_hooks.py  test_captive_http_app.py  test_captive_portal_logic.py  test_cert_check.py  test_check_model_drift.py  test_check_stale_pins.py  test_cleanup.py  test_cli.py  test_cli_bench.py  (+155 more)
(+601 files in other folders)
